# rust-actix-web

./: .gitignore  Cargo.toml  test_utf8.ps1
src/: cache.rs  db.rs  main.rs  rbatis_pool.rs  redis_pool.rs
src/middleware/: error_handler.rs  json_logger.rs  jwt.rs  mod.rs
src/routes/: auth_routes.rs  cache_routes.rs  log_test.rs  main_routes.rs  mod.rs  rbatis_routes.rs  redis_routes.rs
src/utils/: logger_example.rs  mod.rs
