[package]
name = "test01"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "24.0.0"
r2d2 = "0.8.10"
r2d2_mysql = "24.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
env_logger = "0.10.0"
backtrace = "0.3.68"
log = "0.4.21"
