[package]
name = "test01"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "24.0.0"
r2d2 = "0.8.10"
r2d2_mysql = "24.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
env_logger = "0.10.0"
backtrace = "0.3.68"
log = "0.4.21"
jsonwebtoken = "9.2.0"
base64 = "0.21.0"
deadpool-redis = "0.13.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }

[build]
incremental = true  # 增量编译
